--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   path: ^1.9.1
   flutter_animate: ^4.5.2
   intl: ^0.20.2
+  flutter_colorpicker: ^1.1.0
+  perfect_freehand: ^2.5.1
 
 dev_dependencies:
   flutter_test:
