--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^3.1.0
-  sqflite: ^2.4.2
+  drift: ^2.20.3
+  drift_flutter: ^0.2.8
   path: ^1.9.1
+  path_provider: ^2.1.4
+  sqlite3_flutter_libs: ^0.5.24
   flutter_animate: ^4.5.2
   intl: ^0.20.2
   flutter_colorpicker: ^1.1.0
@@ -45,6 +48,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.12
+  drift_dev: ^2.20.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
